--- a/index.html
+++ b/index.html
@@ -30,19 +30,28 @@
     }
     .svb-frame { width: 100%; height: 100%; border: 0; display: block; }
 
-    /* Botón cerrar, ajustado para mejor visibilidad */
-    .svb-close {
-      position: absolute; top: 8px; right: 8px;
-      transform: translate(20%, -20%);
-      width: 36px; height: 36px; border-radius: 50%;
-      background: #111827; color: #fff; border: 2px solid #1f2937;
-      box-shadow: 0 8px 18px rgba(0,0,0,.35);
-      cursor: pointer; z-index: 2;
-      font-size: 24px;
-      line-height: 32px;
-      text-align: center;
-    }
-    .svb-close:hover { background: #0f172a; }
+    /* Botón cerrar, ajustado para no tapar los 3 puntitos */
+.svb-close {
+  position: absolute;
+  top: 8px;
+  right: 48px;              /* lo corro más a la izquierda */
+  transform: translate(0, -20%); /* elimino el corrimiento extra hacia la derecha */
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: #111827;
+  color: #fff;
+  border: 2px solid #1f2937;
+  box-shadow: 0 8px 18px rgba(0,0,0,.35);
+  cursor: pointer;
+  z-index: 2;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+}
+.svb-close:hover {
+  background: #0f172a;
+}
 
     /* Ajustes móviles */
     @media (max-width: 480px) {
