--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           <p class="sub" style="margin:0 0 8px">El código fuente está liberado para ver/editar/aprender:</p>
           <ul class="about-list">
             <li><a href="https://github.com/sanavera/sueldo-vigilador-web" target="_blank" rel="noopener">Repositorio en GitHub</a></li>
-            <li><a href="https://sanavera.netlify.app/" target="_blank" rel="noopener">Sanavera MP3 - Otro proyecto</a></li>
+            <li><a href="https://sanaverayou.netlify.app/" target="_blank" rel="noopener">Sanavera MP3 - Otro proyecto</a></li>
           </ul>
         </div>
 
